Finished homepage, faqpage, and journalpage

--- a/homepage/home.css
+++ b/homepage/home.css
@@ -3,6 +3,7 @@ body {
     display: flex;
     flex-direction: column;
     line-height: 1.3;
+    
 }
 
  
@@ -11,8 +12,8 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 1%;
-    background-color: #68B684;
-    color: #fff;
+    background-color: white;
+    color: black;
 }
 
 h1 {
