--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,13 +17,14 @@
             <ul class="right">
                 <!--Replace the # with the links to the other page.-->
                 <!--This makes sure that the navbar is clickable and useful-->
-                <li><a href="/public/html/home.html"> Home</a></li>
-                <li><a href="/public/html/journal.html"> Journal </a></li>
-                <li><a href="/public/html/map.html">Provider finder Maps</a></li>                
-                <li><a href="/public/html/faq.html"> FAQ Page </a></li>
-                 <!--we need to make sure that the user is logged in, in order to view the maps and journal-->
-                <li><a href="/public/html/login.html"> Log in </a></li>
-                <li><a href="/public/html/signup.html"> Sign Up</a></li>
+                <li><a href="/homepage/home.html"> Home</a></li>
+                <li><a href="/journalpage/journal.html"> Journal </a></li>
+                <li><a href="/faqpage/faq.html"> FAQ Page </a></li>
+               <!--we need to make sure that the user is logged in, in order to view the maps and journal-->
+                <li><a href="/map/map.html">Provider Finder</a></li>
+                <!--I want a login picture. Need to link it -->
+                <li><a href="/loginpage/login.html"> LOG IN </a></li>
+                <li><a href="/signuppage/signup.html"> Sign Up</a></li>
             </ul>
         </nav>
     </header>
